Fix text overlap problem

--- a/css/app.css
+++ b/css/app.css
@@ -2742,7 +2742,7 @@ body {
 
   .details-desktop {
     display: none; } }
-@media (min-width: 1500px) {
+@media (min-width: 1500px) and (min-height: 900px) {
   .details-desktop h1 {
     font-size: 60px;
     margin-bottom: 80px; }
@@ -2754,7 +2754,7 @@ body {
     font-size: 45px; }
   .details-desktop a {
     font-size: 40px; } }
-@media (min-width: 2300px) {
+@media (min-width: 2300px) and (min-height: 1200px) {
   .details-desktop h1 {
     font-size: 80px; }
   .details-desktop h2 {
@@ -2772,14 +2772,14 @@ body {
     font-size: 22px; }
   .details-mobile a {
     font-size: 18px; } }
-@media (min-width: 1600px) {
+@media (min-width: 1600px) and (min-height: 1000px) {
   .details-desktop .more {
     height: 260px; }
   .details-desktop button {
     font-size: 30px; }
   .details-desktop ul li {
     font-size: 24px; } }
-@media (min-width: 1900px) {
+@media (min-width: 1900px) and (min-height: 1000px) {
   .details-desktop .less {
     height: 48px; }
   .details-desktop .more {
@@ -2788,7 +2788,7 @@ body {
     font-size: 40px; }
   .details-desktop ul li {
     font-size: 28px; } }
-@media (min-width: 2400px) {
+@media (min-width: 2400px) and (min-height: 1200px) {
   .details-desktop .less {
     height: 58px; }
   .details-desktop .more {
